module.exports = class Order {
  // TODO
}
